--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "re-base": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-slick": "^0.25.2",
+    "react-spring": "^8.0.27",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.0.1",
     "yup": "^0.28.3"
   },
